--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "TokenOptions": {
+    //buraya JWT'nin bir þablonu var olmassa olmaz alanlarý buraya yazmak zorundayýz
+    "Audience": "engin@engin.com", //projemizin web deðeri,(Kitlesi demek)
+    "Issuer": "engin@engin.com", //Uygulayan demek
+    "AccessTokenExpiration": 10, //geçerlilik süresi dakka cinsinden jwt
+    "SecurityKey": "mysupersecretkeymysupersecretkey" //Güvenlik anahtarý
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
